# adventofcode2024

./: README.md  pyproject.toml
py_src/aoc_24/: __init__.py  day1.py  utils.py
py_src/tests/: test_day1.py
