[project]
name = "aoc-24"
version = "0.1.0"
description = "Advent of code 2024"
readme = "README.md"
authors = [
    { name = "Ewoud Samuels", email = "jinior@live.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
]

[project.scripts]
py-aoc-24 = "aoc_24:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["py_src/aoc_24"]

[tool.hatch.build.targets.wheel]
packages = ["py_src/aoc_24"]
